syntax = "proto3";

package server;
import "google/protobuf/timestamp.proto";
option go_package = "protos/auth/";

service Auth {
    rpc Login(LoginRequest) returns (Empty) {}
    rpc Register(RegisterRequest) returns (Empty) {}
    rpc ChangePassword(ChangePasswordRequest) returns (Empty) {}
    rpc Logout(LogoutRequest) returns (Empty) {}
    rpc LastLogin(LastLoginRequest) returns (LastLoginResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc UnRegister(UnRegisterRequest) returns (Empty) {}
}

message Empty {

}

message LoginRequest {
    User user = 1;
    string password = 2;
}

message RegisterRequest {
    User user = 1;
    string password = 2;
}

message ChangePasswordRequest {
    string username = 1;
    string old_password = 2;
    string new_password = 3;
}

message ChangePasswordResponse {
    bool success = 1;
    string reason = 2;
}

message LogoutRequest {
    string username = 1;
}

message LogoutResponse {
    bool success = 1;
    string reason = 2;
}

message LastLoginRequest {
    string username = 1;
}

message LastLoginResponse {
    bool success = 1;
    string reason = 2;
    string last_login = 3;
}

message GetUserRequest {
    string username = 1;
}

message GetUserResponse {
    bool success = 1;
    string reason = 2;
    User user = 3;
}

message User {
    string id = 1;
    string username = 2;
    string last_server = 3;
    string ip = 4;
    string registeredIp = 5;
    bool auth = 6;
}

message UnRegisterRequest {
    string username = 1;
    string password = 2;
}

message UnRegisterResponse {
    bool success = 1;
    string reason = 2;
}
